--- a/Medux/Medux.Domain/Medux.Domain.csproj
+++ b/Medux/Medux.Domain/Medux.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="dotenv.net" Version="3.2.1" />
+  </ItemGroup>
+
 </Project>
